Dodanie pluginu gapinlinechoice i usunięcie kodów obsługi starych pluginów bug 48491

--- a/trunk/QtiPageEditor/src/eu/ydp/qtiPageEditor/public/tinymce/tiny_mce/themes/advanced/skins/o2k7/ui.css
+++ b/trunk/QtiPageEditor/src/eu/ydp/qtiPageEditor/public/tinymce/tiny_mce/themes/advanced/skins/o2k7/ui.css
@@ -212,12 +212,10 @@
 .o2k7Skin span.mce_del {background-position:-940px -20px}
 .o2k7Skin span.mce_ins {background-position:-960px -20px}
 .o2k7Skin span.mce_pagebreak {background-position:0 -40px}
-.o2k7Skin span.mce_insertgap {background-position:-20px -40px}
-.o2k7Skin span.mce_removegap {background-position:-40px -40px}
+.o2k7Skin span.mce_insertgapinlinechoice {background-position:-20px -40px}
+.o2k7Skin span.mce_removegapinlinechoice {background-position:-40px -40px}
 .o2k7Skin span.mce_insertchoicesection {background-position:-60px -40px}
 .o2k7Skin span.mce_removechoicesection {background-position:-80px -40px}
-.o2k7Skin span.mce_insertinlinechoice {background-position:-100px -40px}
-.o2k7Skin span.mce_removeinlinechoice {background-position:-120px -40px}
 .o2k7Skin span.mce_imglib {background-position:-140px -40px}
 .o2k7Skin span.mce_insertapplink {background-position:-160px -40px}
 .o2k7Skin span.mce_removeapplink {background-position:-180px -40px}
